BUG FIX: imgs not showing in dev-mode

--- a/client/modules/App/App.css
+++ b/client/modules/App/App.css
@@ -3,7 +3,6 @@
   width: 100%;
   padding: 15px;
   margin: 0 auto;
-  background: red;
 }
 
 ul {
@@ -17,7 +16,7 @@ li {
 .ticket {
   white-space: normal;
   background-color: black;
-  background-image: url(../../static/imgs/discoBG.png);
+  background-image: url(static/imgs/discoBG.png);
   background-size: 70%;
   background-position-x: right;
   background-position-y: bottom;
